Improvement for home page

--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -102,7 +102,7 @@
 
     @media (min-width: 768px) {
         margin-bottom: 94px;
-        padding: 50px 0 167px;
+        padding: 100px 0 217px;
     }
 
     .wrapper {
@@ -855,7 +855,7 @@
                 img {
                     max-height: 531px;
                     aspect-ratio: 1/2;
-                    object-position: top left;
+                    object-position: top center;
                 }
             }
 
@@ -889,7 +889,7 @@
 
     .reviews-slider__mw {
         background: #F4F5F6;
-        max-width: 852px;
+        max-width: 645px;
         width: 100%;
         margin: 0 auto;
         display: flex;
@@ -899,15 +899,7 @@
         position: relative;
 
         @media (min-width: 481px) {
-            padding: 160px 50px 60px;
-        }
-
-        @media (min-width: 768px) {
-            padding: 192px 60px 72px;
-        }
-
-        @media (min-width: 991px) {
-            padding: 222px 70px 102px;
+            padding: 149px 70px 44px;
         }
 
         .quote {
@@ -922,18 +914,9 @@
             transform: translateX(-50%);
 
             @media (min-width: 481px) {
-                top: 80px;
-                font-size: 180px;
-            }
-
-            @media (min-width: 768px) {
-                top: 45px;
-                font-size: 211px;
-                line-height: 248px;
-            }
-
-            @media (min-width: 991px) {
-                top: 70px;
+                top: 23px;
+                font-size: 160px;
+                line-height: 189px;
             }
         }
 
@@ -960,34 +943,26 @@
         }
 
         .reviews-slider-next {
-            right: 19px;
+            right: 13px;
 
             @media (min-width: 481px) {
                 right: 5%;
             }
 
             @media (min-width: 768px) {
-                right: 60px;
-            }
-
-            @media (min-width: 991px) {
-                right: 70px;
+                right: 33px;
             }
         }
 
         .reviews-slider-prev {
-            left: 19px;
+            left: 13px;
 
             @media (min-width: 481px) {
                 left: 5%;
             }
 
             @media (min-width: 768px) {
-                left: 60px;
-            }
-
-            @media (min-width: 991px) {
-                left: 70px;
+                left: 33px;
             }
         }
     }
@@ -1055,10 +1030,6 @@
                 text-transform: uppercase;
 
                 @media (min-width: 481px) {
-                    margin-top: 40px;
-                }
-
-                @media (min-width: 991px) {
                     margin-top: 50px;
                 }
             }
