--- a/sections/new-home-page.liquid
+++ b/sections/new-home-page.liquid
@@ -8,7 +8,7 @@
     <div class="hero aos-init aos-animate lazyload fade-in" data-aos="fade-up" style="background-image:url('{{ 'Miranda-min.jpg' |  asset_url }}')">
         <div class="wrapper">
             <div class="hero__text">
-                <div class="hero__text_title">EVERYDAY ELEVATED ESSENTIALS</div>
+                <div class="hero__text_title">Everyday Luxury Essentials</div>
                 <a href="/collections/shop" class="hero__text_button">SHOP NOW</a>
             </div>
         </div>
@@ -42,7 +42,7 @@
             <div class="new-releases-shop-look__card">
                 <a href="/pages/shop-the-look-1" class="new-releases-shop-look__link">
                     <div class="hidden-hover">
-                        <img class="img lazyload fade-in" src="https://cdn.shopify.com/s/files/1/0022/9235/1022/files/DAY_02_SHOT_22_0049_copy_1220x.jpg?v=1619034345" alt="shop the look">
+                        <img class="img lazyload fade-in" src="https://cdn.shopify.com/s/files/1/0022/9235/1022/files/DAY_02_SHOT_22_0090_copy_1220x.jpg?v=1619036180" alt="shop the look">
                     </div>
                     <div class="new-releases-shop-look__button">SHOP THE LOOK</div>
                 </a>
