--- a/sections/shop-the-look.liquid
+++ b/sections/shop-the-look.liquid
@@ -66,7 +66,7 @@
                                          data-parent-fit="cover"
                                          data-sizes="auto"/>
                                 </div>
-                                <span>{{ product.title }}</span>
+                                <span class="shop-the-look__product-title">{{ product.title }}</span>
                             </a>
                             <div class="shop-the-look__add">
                                 {% form 'product', product %}
