Bug fix with add to cart, update home page

--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -102,7 +102,7 @@
 
     @media (min-width: 768px) {
         margin-bottom: 94px;
-        padding: 100px 0 217px;
+        padding: 35px 0 282px;
     }
 
     .wrapper {
@@ -136,6 +136,16 @@
             }
         }
 
+        .hero__text_title {
+            font-size: 24px;
+            line-height: 28px;
+
+            @media (min-width: 481px) {
+                font-size: 40px;
+                line-height: 47px;
+            }
+        }
+
         .hero__text_button, .new-releases-shop-loungewear__text_button {
             padding: 7px 12px;
             text-transform: uppercase;
@@ -164,6 +174,14 @@
             &:hover {
                 background: #222222;
                 box-shadow: 0 2px 20px -2px rgba(27, 33, 58, 0.4);
+            }
+        }
+
+        .hero__text_button {
+            padding: 7px 12px;
+
+            @media (min-width: 481px) {
+               padding: 7.5px 8.2px;
             }
         }
     }
