--- a/sections/new-home-page.liquid
+++ b/sections/new-home-page.liquid
@@ -73,7 +73,7 @@
         <div class="wrapper">
             <div class="new-releases-shop-loungewear__text">
                 <div class="new-releases-shop-loungewear__text_title">BESTSELLING LOUNGEWEAR</div>
-                <a href="/collections/loungewear" class="new-releases-shop-loungewear__text_button">SHOP NOW</a>
+                <a href="/collections/bottoms" class="new-releases-shop-loungewear__text_button">SHOP NOW</a>
             </div>
         </div>
     </div>
@@ -120,15 +120,7 @@
                         <div class="hidden-hover">
                             <img class="img lazyload fade-in" src="https://cdn.shopify.com/s/files/1/0022/9235/1022/products/lounge-pant-heather-grey-bottoms-eterne-470321_360x.jpg?v=1627595226" alt="Lounge Pant">
                         </div>
-                        <div class="styles-slider__item_description">Lounge Pant</div>
-                    </div>
-                </a>
-                <a href="/collections/accessories" class="styles-slider__item swiper-slide">
-                    <div class="styles-slider__item-wrap">
-                        <div class="hidden-hover">
-                            <img class="img lazyload fade-in" src="https://cdn.shopify.com/s/files/1/0022/9235/1022/products/eterne-mask-intimates-eterne-578050_360x.jpg?v=1616622268" alt="Accessories">
-                        </div>
-                        <div class="styles-slider__item_description">Accessories</div>
+                        <div class="styles-slider__item_description">Bottoms</div>
                     </div>
                 </a>
             </div>
