Fix for campaign-videobanner templates/home page update

--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -199,7 +199,7 @@
     }
 
     @media (min-width: 768px) {
-        margin: 0 auto 135px;
+        margin: 0 auto 114px;
     }
 
     .new-releases__slider {
@@ -345,6 +345,14 @@
 
     @media (min-width: 768px) {
         margin: 0 auto 121px;
+    }
+
+    .home-page-title {
+        margin-bottom: 26px;
+
+        @media (min-width: 991px) {
+            margin-bottom: 40px;
+        }
     }
 
     .new-releases-shop-look__top,
@@ -764,7 +772,14 @@
     }
 
     .home-page-title {
+        margin-bottom: 6px;
+    }
+
+    .home-page-subtitle {
+        font-size: 16px;
+        line-height: 24px;
         margin-bottom: 31px;
+        text-align: center;
 
         @media (min-width: 481px) {
             margin-bottom: 48px;
