--- a/sections/new-home-page.liquid
+++ b/sections/new-home-page.liquid
@@ -38,6 +38,7 @@
 
     {% comment %} New releases shop look section {% endcomment %}
     <div class="new-releases-shop-look wrapper aos-init aos-animate" data-aos="fade-up">
+        <div class="home-page-title wrapper">SHOP THE LOOK</div>
         <div class="new-releases-shop-look__top">
             <div class="new-releases-shop-look__card">
                 <a href="/pages/shop-the-look-1" class="new-releases-shop-look__link">
@@ -132,26 +133,27 @@
     {% comment %} Éterne girls section {% endcomment %}
     <div class="eterne-girls wrapper aos-init aos-animate" data-aos="fade-up">
         <div class="home-page-title wrapper">ÉTERNE GIRLS</div>
+        <div class="home-page-subtitle wrapper">On Instagram</div>
         <div class="eterne-girls__wrapper">
             <div class="eterne-girls__left">
-                <a href="#" class="eterne-girls__top-img">
+                <a href="https://www.instagram.com/eterne/" target="_blank" class="eterne-girls__top-img">
                     <div class="hidden-hover">
                         <img class="img lazyload fade-in" src="{{ 'eterne-girls-1.jpg' |  asset_url }}" alt="">
                     </div>
                 </a>
-                <a href="#" class="eterne-girls__bottom-img">
+                <a href="https://www.instagram.com/eterne/" target="_blank" class="eterne-girls__bottom-img">
                     <div class="hidden-hover">
                         <img class="img lazyload fade-in" src="{{ 'eterne-girls-3.jpeg' |  asset_url }}" alt="">
                     </div>
                 </a>
             </div>
             <div class="eterne-girls__right">
-                <a href="#" class="eterne-girls__top-img">
+                <a href="https://www.instagram.com/eterne/" target="_blank" class="eterne-girls__top-img">
                     <div class="hidden-hover">
                         <img class="img lazyload fade-in" src="{{ 'eterne-girls-2.jpg' |  asset_url }}" alt="">
                     </div>
                 </a>
-                <a href="#" class="eterne-girls__bottom-img">
+                <a href="https://www.instagram.com/eterne/" target="_blank" class="eterne-girls__bottom-img">
                     <div class="hidden-hover">
                         <img class="img lazyload fade-in" src="{{ 'eterne-girls-4.jpg' |  asset_url }}" alt="">
                     </div>
