--- a/assets/shop-the-look.scss.liquid
+++ b/assets/shop-the-look.scss.liquid
@@ -56,6 +56,8 @@
             margin-top: 45px;
 
             @media (min-width: 481px) {
+                font-size: 22px;
+                line-height: 33px;
                 margin-top: 60px;
             }
         }
