--- a/templates/page.campaign-videobanner-paige.liquid
+++ b/templates/page.campaign-videobanner-paige.liquid
@@ -2,7 +2,7 @@
 
 {% comment %} {% section 'vallery-youtube-video' %} {% endcomment %}
 
-{% section 'vallery-campaign-shop' %}
+{% section 'paige-campaign-shop' %}
 
 <div class="wrapper page-margin page-{{ page.handle }}">
 {{ page.content }}
