--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -93,7 +93,7 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding: 47px 0 185px;
+    padding: 27px 0 185px;
     margin-bottom: 49px;
 
     @media (min-width: 481px) {
@@ -102,7 +102,7 @@
 
     @media (min-width: 768px) {
         margin-bottom: 94px;
-        padding: 35px 0 282px;
+        padding: 35px 0 377px;
     }
 
     .wrapper {
@@ -139,10 +139,12 @@
         .hero__text_title {
             font-size: 24px;
             line-height: 28px;
+            max-width: 225px;
 
             @media (min-width: 481px) {
                 font-size: 40px;
                 line-height: 47px;
+                max-width: 380px;
             }
         }
 
