Added image banner for collections / Changed description in slider to Tops

--- a/sections/new-home-page.liquid
+++ b/sections/new-home-page.liquid
@@ -89,7 +89,7 @@
                         <div class="hidden-hover">
                             <img class="img lazyload fade-in" src="https://cdn.shopify.com/s/files/1/0022/9235/1022/products/the-short-sleeve-boyfriend-tee-heather-grey-shirts-eterne-187550_360x.jpg?v=1620761147" alt="T-shirts">
                         </div>
-                        <div class="styles-slider__item_description">T-shirts</div>
+                        <div class="styles-slider__item_description">Tops</div>
                     </div>
                 </a>
                 <a href="/collections/bodysuits" class="styles-slider__item swiper-slide">
