--- a/sections/collection-shop.liquid
+++ b/sections/collection-shop.liquid
@@ -84,7 +84,7 @@
 
 
 <div data-section-id="{{ section.id }}" data-section-type="parallax">       
-  <div class="ev-shop-hero" >
+  <div class="ev-shop-hero aos-init aos-animate lazyload fade-in" data-aos="fade-up" >
     <img src="{{ 'shop-hero-2.jpg' | asset_url }}" alt="woman lounging" >
   </div>
   <div class="collection sidebar--hidden" data-sidebar-toggle>    
