--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -6222,6 +6222,12 @@ div.wishlistpage .addsingleproduct {
   padding: 6px 12px 6px 4px;
 }
 
+p.size-guide-link a {
+  font-size: 14px;
+  color: #000;
+  border-bottom: 1px solid #b5b5b5;
+}
+
 /*.cbb-frequently-bought-container {
  border-top: 1px solid #f7f7f7; 
  display: flex;
