--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -6223,7 +6223,7 @@ div.wishlistpage .addsingleproduct {
 }
 
 p.size-guide-link a {
-  font-size: 14px;
+  font-size: 14px !!important;
   color: #000;
   border-bottom: 1px solid #b5b5b5;
 }
