mor eimportant testing

--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -6223,9 +6223,9 @@ div.wishlistpage .addsingleproduct {
 }
 
 p.size-guide-link a {
-  font-size: 14px !!important;
-  color: #000;
-  border-bottom: 1px solid #b5b5b5;
+  font-size: 14px !important;
+  color: #000 !important;
+  border-bottom: 1px solid #b5b5b5 !important;
 }
 
 /*.cbb-frequently-bought-container {
