--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6161,6 +6161,12 @@ div.wishlistpage .addsingleproduct {
   padding: 6px 12px 6px 4px;
 }
 
+p.size-guide-link a {
+  font-size: 14px !important;
+  color: #000 !important;
+  border-bottom: 1px solid #b5b5b5 !important;
+}
+
 /*.cbb-frequently-bought-container {
  border-top: 1px solid #f7f7f7;
  display: flex;
