move Sarah's lines to .liquid

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6167,6 +6167,10 @@ p.size-guide-link a {
   border-bottom: 1px solid #b5b5b5 !important;
 }
 
+p.size-guide-link a:hover {
+  border-bottom: 1px solid #9b9b9b !important;
+}
+
 /*.cbb-frequently-bought-container {
  border-top: 1px solid #f7f7f7;
  display: flex;
