--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6162,13 +6162,13 @@ div.wishlistpage .addsingleproduct {
 }
 
 p.size-guide-link a {
-  font-size: 14px !important;
-  color: #000 !important;
-  border-bottom: 1px solid #b5b5b5 !important;
+  font-size: 14px;
+  color: #000;
+  border-bottom: 1px solid #b5b5b5;
 }
 
 p.size-guide-link a:hover {
-  border-bottom: 1px solid #9b9b9b !important;
+  border-bottom: 1px solid #9b9b9b;
 }
 
 /*.cbb-frequently-bought-container {
