bugfix home page

--- a/sections/new-home-page-hero.liquid
+++ b/sections/new-home-page-hero.liquid
@@ -20,7 +20,7 @@
 {% schema %}
     {
     "name": "Hero",
-    "class": "hero",
+    "class": "home-hero",
     "settings": [
         {
             "type": "image_picker",
