--- a/sections/new-home-page-shop-look.liquid
+++ b/sections/new-home-page-shop-look.liquid
@@ -36,6 +36,7 @@
     {
     "name": "NewReleasesShopLook",
     "class": "newReleasesShopLook",
+    "max_blocks": 2,
     "settings": [
         {
             "type": "text",
