Added new option 'Reduce image size by 10%'

--- a/sections/gift-card-collection.liquid
+++ b/sections/gift-card-collection.liquid
@@ -373,7 +373,7 @@
 
 {% schema %}
 {
-  "name": "Dresses Collection",
+  "name": "Gift card",
   "settings": [
     {
        "type": "header",
@@ -692,6 +692,12 @@
           "id": "image_autoheight_enable",
           "label": "Auto Height Enabled",
           "default": true
+        },
+        {
+          "type": "checkbox",
+          "id": "image_reduce_enable",
+          "label": "Reduce image size by 10%",
+          "default": false
         },
         {
           "type": "select",
