--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8707,6 +8707,10 @@ span {
   margin-bottom: 5px;
 }
 
+.template-product .mt-10 {
+  margin-top: 10px;
+}
+
 /*Wishlist Icon Styling */
 .swym-wishlist {
   position: absolute;
