--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -6007,6 +6007,7 @@ label.quatity-selector{
 
 .cbb-frequently-bought-container {
   max-width: 1180px;
+  order: 3;
 }
 .cbb-frequently-bought-selector-list input {
 	height: 15px !important;
