--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -1196,3 +1196,234 @@
         }
     }
 }
+
+// Home page section - styled by chloe
+.styled-chloe {
+    margin-bottom: 57px;
+
+    @media (min-width: 481px) {
+        margin-bottom: 80px;
+    }
+
+    @media (min-width: 768px) {
+        margin-bottom: 143px;
+    }
+
+    .home-page-title {
+        margin-bottom: 26px;
+
+        @media (min-width: 481px) {
+            margin-bottom: 66px;
+        }
+    }
+
+    .styled-chloe-card {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &:nth-child(1) {
+            padding-top: 40px;
+            padding-bottom: 24px;
+
+            @media (min-width: 481px) {
+                padding-bottom: 35px;
+                padding-top: 50px;
+            }
+
+            .styled-chloe-card-link {
+                align-items: flex-start;
+            }
+
+            .styled-chloe-card_left-img {
+                max-width: 394px;
+                max-height: 587px;
+                right: -20px;
+                z-index: 1;
+                aspect-ratio: 9/16;
+
+                @media (min-width: 481px) {
+                    right: -35px;
+                }
+            }
+
+            .styled-chloe-card_right-img {
+                max-width: 347px;
+                max-height: 437px;
+                left: -20px;
+                top: -40px;
+                aspect-ratio: 3/4;
+
+                @media (min-width: 481px) {
+                    left: -35px;
+                    top: -50px;
+                }
+            }
+        }
+
+        &:nth-child(2) {
+            padding-bottom: 24px;
+
+            @media (min-width: 481px) {
+                padding-bottom: 44px;
+            }
+
+            .styled-chloe-card-link {
+               align-items: center;
+            }
+
+            .styled-chloe-card_left-img {
+                max-width: 288px;
+                max-height: 363px;
+                right: -20px;
+                top: -20px;
+                aspect-ratio: 3/4;
+
+                @media (min-width: 481px) {
+                    right: -26px;
+                    top: -17px;
+                }
+            }
+
+            .styled-chloe-card_right-img {
+                max-width: 387px;
+                max-height: 576px;
+                z-index: 1;
+                left: -20px;
+                aspect-ratio: 9/16;
+
+                @media (min-width: 481px) {
+                    left: -26px;
+                }
+            }
+        }
+
+        &:nth-child(3) {
+            padding-bottom: 60px;
+
+            @media (min-width: 481px) {
+                padding-bottom: 80px;
+            }
+
+            .styled-chloe-card-link {
+                align-items: flex-end;
+            }
+
+            .styled-chloe-card_left-img {
+                max-width: 387px;
+                max-height: 576px;
+                z-index: 1;
+                right: -20px;
+                aspect-ratio: 9/16;
+
+                @media (min-width: 481px) {
+                    right: -32px;
+                }
+            }
+
+            .styled-chloe-card_right-img {
+                max-width: 347px;
+                max-height: 437px;
+                left: -20px;
+                bottom: -60px;
+                aspect-ratio: 3/4;
+
+                @media (min-width: 481px) {
+                    left: -32px;
+                    bottom: -80px;
+                }
+            }
+        }
+
+        .styled-chloe-card-link {
+            display: flex;
+            justify-content: center;
+            width: 100%;
+        }
+
+        .styled-chloe-card_left-img,
+        .styled-chloe-card_right-img {
+            display: block;
+            position: relative;
+            width: 100%;
+            height: 100%;
+            border: solid 5px #fff;
+            overflow: hidden;
+
+            &.object-position-top {
+                img {
+                    object-position: top;
+                }
+            }
+
+            &.object-position-mid {
+                img {
+                    object-position: center;
+                }
+            }
+
+            &.object-position-bot {
+                img {
+                    object-position: bottom;
+                }
+            }
+
+            @media (min-width: 481px) {
+                border: solid 10px #fff;
+            }
+
+            img {
+                width: 100%;
+                object-fit: cover;
+                object-position: top;
+                height: 100%;
+                transition: all 1.5s ease-in-out;
+
+                &:hover {
+                    transform: scale(1.15);
+                }
+            }
+        }
+    }
+
+    .styled-chloe-btn {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin-top: 40px;
+
+        @media (min-width: 481px) {
+            margin-top: 48px;
+        }
+
+        @media (min-width: 768px) {
+            margin-top: 66px;
+        }
+
+        a {
+            background: #2B2B2B;
+            color: #fff;
+            text-decoration: none;
+            transition: all .5s ease-in-out;
+            font-size: 14px;
+            line-height: 16px;
+            padding: 7px 12px;
+
+            @media (min-width: 481px) {
+                font-size: 16px;
+                line-height: 19px;
+                padding: 12px 51px;
+            }
+
+            @media (min-width: 768px) {
+                font-size: 21px;
+                line-height: 25px;
+            }
+
+            &:hover {
+                background: #222222;
+                box-shadow: 0 2px 20px -2px #1b213a66;
+            }
+        }
+    }
+}
