--- a/sections/new-home-page-girls-section.liquid
+++ b/sections/new-home-page-girls-section.liquid
@@ -74,22 +74,22 @@
             "label": "rigth eterne girls bottom img"
         },
         {
-            "type": "link",
+            "type": "text",
             "id": "left_url_top_img",
             "label": "Link left top img"
         },
         {
-            "type": "link",
+            "type": "text",
             "id": "left_url_bottom_img",
             "label": "Link left bottom img"
         },
         {
-            "type": "link",
+            "type": "text",
             "id": "rigth_url_top_img",
             "label": "Link rigth top img"
         },
         {
-            "type": "link",
+            "type": "text",
             "id": "rigth_url_bottom_img",
             "label": "Link rigth bottom img"
         }
