--- a/assets/new-home-page.scss.liquid
+++ b/assets/new-home-page.scss.liquid
@@ -1223,8 +1223,8 @@
         justify-content: center;
 
         &:nth-child(1) {
-            padding-top: 40px;
-            padding-bottom: 24px;
+            padding-top: 27px;
+            padding-bottom: 18px;
 
             @media (min-width: 481px) {
                 padding-bottom: 35px;
@@ -1236,33 +1236,39 @@
             }
 
             .styled-chloe-card_left-img {
-                max-width: 394px;
-                max-height: 587px;
-                right: -20px;
+                max-width: 204px;
+                max-height: 304px;
                 z-index: 1;
+                margin-right: -19px;
                 aspect-ratio: 9/16;
 
                 @media (min-width: 481px) {
+                    max-width: 394px;
+                    max-height: 587px;
                     right: -35px;
+                    margin: 0;
                 }
             }
 
             .styled-chloe-card_right-img {
-                max-width: 347px;
-                max-height: 437px;
-                left: -20px;
-                top: -40px;
-                aspect-ratio: 3/4;
+                max-width: 179px;
+                max-height: 225px;
+                margin-top: -30px;
+                margin-left: -19px;
 
                 @media (min-width: 481px) {
+                    max-width: 347px;
+                    max-height: 437px;
                     left: -35px;
                     top: -50px;
+                    aspect-ratio: 3/4;
+                    margin: 0;
                 }
             }
         }
 
         &:nth-child(2) {
-            padding-bottom: 24px;
+            padding-bottom: 18px;
 
             @media (min-width: 481px) {
                 padding-bottom: 44px;
@@ -1273,33 +1279,38 @@
             }
 
             .styled-chloe-card_left-img {
-                max-width: 288px;
-                max-height: 363px;
-                right: -20px;
-                top: -20px;
-                aspect-ratio: 3/4;
+                max-width: 150px;
+                max-height: 188px;
+                margin-right: -15px;
 
                 @media (min-width: 481px) {
                     right: -26px;
                     top: -17px;
+                    max-width: 288px;
+                    max-height: 363px;
+                    aspect-ratio: 3/4;
+                    margin: 0;
                 }
             }
 
             .styled-chloe-card_right-img {
-                max-width: 387px;
-                max-height: 576px;
+                max-width: 200px;
+                max-height: 298px;
                 z-index: 1;
-                left: -20px;
+                margin-left: -15px;
                 aspect-ratio: 9/16;
 
                 @media (min-width: 481px) {
                     left: -26px;
+                    max-width: 387px;
+                    max-height: 576px;
+                    margin: 0;
                 }
             }
         }
 
         &:nth-child(3) {
-            padding-bottom: 60px;
+            padding-bottom: 40px;
 
             @media (min-width: 481px) {
                 padding-bottom: 80px;
@@ -1310,27 +1321,33 @@
             }
 
             .styled-chloe-card_left-img {
-                max-width: 387px;
-                max-height: 576px;
+                max-width: 200px;
+                max-height: 298px;
                 z-index: 1;
-                right: -20px;
                 aspect-ratio: 9/16;
+                margin-right: -17.5px;
 
                 @media (min-width: 481px) {
                     right: -32px;
+                    max-width: 387px;
+                    max-height: 576px;
+                    margin: 0;
                 }
             }
 
             .styled-chloe-card_right-img {
-                max-width: 347px;
-                max-height: 437px;
-                left: -20px;
-                bottom: -60px;
-                aspect-ratio: 3/4;
+                max-width: 179px;
+                max-height: 226px;
+                margin-left: -17.5px;
+                margin-bottom: -40px;
 
                 @media (min-width: 481px) {
+                    max-width: 347px;
+                    max-height: 437px;
                     left: -32px;
                     bottom: -80px;
+                    aspect-ratio: 3/4;
+                    margin: 0;
                 }
             }
         }
@@ -1347,7 +1364,7 @@
             position: relative;
             width: 100%;
             height: 100%;
-            border: solid 5px #fff;
+            border: solid 10px #fff;
             overflow: hidden;
 
             &.object-position-top {
@@ -1368,10 +1385,6 @@
                 }
             }
 
-            @media (min-width: 481px) {
-                border: solid 10px #fff;
-            }
-
             img {
                 width: 100%;
                 object-fit: cover;
@@ -1390,7 +1403,7 @@
         display: flex;
         align-items: center;
         justify-content: center;
-        margin-top: 40px;
+        margin-top: 23px;
 
         @media (min-width: 481px) {
             margin-top: 48px;
