--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8354,6 +8354,9 @@ input[type="text"], input[type="search"], input[type="password"], input[type="em
     top: 5px !important;
   }
 }
+.SI_trigger {
+  margin-top: 10px;
+}
 .grid__item.search-result p > a {
   text-decoration: none;
 }
