--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -8354,9 +8354,12 @@ input[type="text"], input[type="search"], input[type="password"], input[type="em
     top: 5px !important;
   }
 }
-.SI_trigger {
-  margin-top: 10px;
+
+/* notify when available button */
+#SI_trigger {
+  margin-top: 20px;
 }
+
 .grid__item.search-result p > a {
   text-decoration: none;
 }
