--- a/assets/theme.scss
+++ b/assets/theme.scss
@@ -7647,7 +7647,7 @@ html.iframe{
   cursor: progress; }
 
 .mfp-zoom-out-cur {
-  overflow: hidden;
+  overflow: hidden
 }
 
 .mfp-zoom-out-cur, .mfp-zoom-out-cur .mfp-image-holder .mfp-close {
