--- a/sections/product.liquid
+++ b/sections/product.liquid
@@ -68,9 +68,15 @@
       "content": "Optional sizing popup"
     },
     {
-      "id": "info_page",
+      "id": "info_page_1",
       "type": "page",
       "label": "Select page",
+      "info": "This popup will show on every product."
+    },
+    {
+      "id": "info_page_2",
+      "type": "page",
+      "label": "Select page collection body",
       "info": "This popup will show on every product."
     },
     {
