Changed styles for mobile menu switching and overriding chat bot

--- a/assets/theme.scss.liquid
+++ b/assets/theme.scss.liquid
@@ -2894,7 +2894,7 @@ ul.main-menu #menu-account-link {
 }
 
 /*================ Large / Small Display Logic ================*/
-@media only screen and (max-width: 1160px) {
+@media only screen and (max-width: 1230px) {
   .nav--mobile{
     display: block;
   }
@@ -8781,4 +8781,8 @@ span {
       display: none;
     }
   }
+}
+
+.otCookiesNotification #cookies-wrapper {
+  z-index: 1000000000;
 }
